--- a/dragonBall/.classpath
+++ b/dragonBall/.classpath
@@ -1,19 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-21">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" path="src"/>
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-	<classpathentry kind="lib" path="C:/Users/Jorge/Desktop/librerias/mysql-connector-j-9.3.0.jar"/>
-=======
-	<classpathentry kind="lib" path="C:/Users/adria/OneDrive/Desktop/Librerías/mysql-connector-j-9.3.0.jar"/>
->>>>>>> Stashed changes
-=======
 	<classpathentry kind="lib" path="C:/Users/usuario/Desktop/Librerias/mysql-connector-j-9.3.0.jar"/>
->>>>>>> Stashed changes
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-21"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
